Prevent Label from collapsing
- label will not collapse if user puts something in the inputs field
- used :valid css technique

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -662,3 +662,8 @@ a {
   background-color: white;
   pointer-events: none;
 }
+
+.inputBox .inputField:valid + .inputLabel{
+  font-size: 12px;
+  top: -55px;
+}
